--- a/dye/templates/dye/snippets/list_contributions.html
+++ b/dye/templates/dye/snippets/list_contributions.html
@@ -26,5 +26,5 @@
     </tbody>
   </table>
 {% else %}
-  There are no contributions here yet. <a href="{% url "dye:single-upload" %}"></a>
+  <p>There are no contributions here yet. <a href="{% url "dye:single-upload" %}"></a></p>
 {% endif %}
