--- a/DSSCDB/static/DSSCDB/css/base.css
+++ b/DSSCDB/static/DSSCDB/css/base.css
@@ -2,10 +2,12 @@
 :root {
 
     --nav-color: #2c3e50;
+    --footer-color: #1c2a38;
     --background-color: #EFEFF3;
     --white: #ffffff;
     --gray-1: #868179;
     --gray-2: #565645;
+    --complement-color: #18bc9c;
 }
 
 html, body {
