--- a/DSSCDB/templates/DSSCDB/footer.html
+++ b/DSSCDB/templates/DSSCDB/footer.html
@@ -1,39 +1,42 @@
 {% load static %}
 <link href="{% static 'DSSCDB/css/footer.css' %}" rel="stylesheet" type="text/css">
 <footer>
-    <div class="footer" id="footer">
-        <div class="container">
-            <div class="row footer-content" >
-                <div class="col-lg-4 col-xs-6">
-                    <h3> Lorem Ipsum </h3>
-                    <ul>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                    </ul>
-                </div>
-                <div class="col-lg-4 col-xs-6">
-                    <h3> Lorem Ipsum </h3>
-                    <ul>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                    </ul>
-                </div>
-            <!--/.row-->
+  <div class="footer" id="footer">
+    <div class="container">
+      <div class="row footer-content">
+        <div class="col-lg-4 col-xs-6 footer-panel">
+          <h3> Lorem Ipsum </h3>
+          <ul>
+            <li><a href="#" class="dropdown-toggle"> Lorem Ipsum </a></li>
+            <li><a href="#"> Lorem Ipsum </a></li>
+            <li><a href="#"> Lorem Ipsum </a></li>
+            <li><a href="#"> Lorem Ipsum </a></li>
+          </ul>
         </div>
-        <!--/.container-->
+        <div class="col-lg-4 col-xs-6 footer-panel">
+          <h3> Lorem Ipsum </h3>
+          <ul>
+            <li><a href="#"> Lorem Ipsum </a></li>
+            <li><a href="#"> Lorem Ipsum </a></li>
+            <li><a href="#"> Lorem Ipsum </a></li>
+            <li><a href="#"> Lorem Ipsum </a></li>
+          </ul>
+        </div>
+        <!--/.row-->
+      </div>
     </div>
-    <!--/.footer-->
-
-    <div class="footer-bottom">
-        <div class="container">
-            <p class="pull-left"> Copyright {%  now "Y" %} © Dye Sensitized Solar Cell Database. All right reserved. </p>
+      <div class="row">
+        <div class="footer-bottom">
+          <div class="container">
+            <p class="pull-left"> Copyright {% now "Y" %} © Dye Sensitized Solar Cell Database. All right reserved. </p>
             <div class="pull-right">
             </div>
+          </div>
         </div>
+      </div>
     </div>
-    <!--/.footer-bottom-->
+  <!--/.container-->
+  <!--/.footer-->
+
+  <!--/.footer-bottom-->
 </footer>
