--- a/src/DSSCDB/templates/DSSCDB/base.html
+++ b/src/DSSCDB/templates/DSSCDB/base.html
@@ -23,7 +23,7 @@
 
 <body>
 <main class="wrapper">
-  {% include "DSSCDB/menu.html" %}
+  {% include 'DSSCDB/menu.html' %}
   <div class="container">
     <div class="row">
       <div class="col-md-12">
