--- a/src/DSSCDB/templates/DSSCDB/footer.html
+++ b/src/DSSCDB/templates/DSSCDB/footer.html
@@ -5,36 +5,32 @@
     <div class="container">
       <div class="row footer-content">
         <div class="col-lg-4 col-xs-6 footer-panel">
-          <h3> Lorem Ipsum </h3>
           <ul>
-            <li><a href="#" class="dropdown-toggle"> Lorem Ipsum </a></li>
-            <li><a href="#"> Lorem Ipsum </a></li>
-            <li><a href="#"> Lorem Ipsum </a></li>
-            <li><a href="#"> Lorem Ipsum </a></li>
+            <li><p class="footer-text">Information</p></li>
+            <li><a href="{% url 'contact' %}">Contact us </a></li>
+            <li><a href="https://github.com/martsime/DSSCDB"> Github </a></li>
           </ul>
         </div>
         <div class="col-lg-4 col-xs-6 footer-panel">
-          <h3> Lorem Ipsum </h3>
           <ul>
-            <li><a href="#"> Lorem Ipsum </a></li>
-            <li><a href="#"> Lorem Ipsum </a></li>
-            <li><a href="#"> Lorem Ipsum </a></li>
-            <li><a href="#"> Lorem Ipsum </a></li>
+            <li><p class="footer-text">Special thanks to</p></li>
+            <li><a href="http://www.ntnu.edu/chemistry"> Department of Chemistry, NTNU </a></li>
+            <li><a href="http://peter-ertl.com/jsme/"> JSME Molecule Editor </a></li>
           </ul>
         </div>
         <!--/.row-->
       </div>
     </div>
-      <div class="row">
-        <div class="footer-bottom">
-          <div class="container">
-            <p class="pull-left"> Copyright {% now "Y" %} © Dye Sensitized Solar Cell Database. All right reserved. </p>
-            <div class="pull-right">
-            </div>
+    <div class="row">
+      <div class="footer-bottom">
+        <div class="container">
+          <p class="pull-left"> Copyright {% now "Y" %} © Dye Sensitized Solar Cell Database. All right reserved. </p>
+          <div class="pull-right">
           </div>
         </div>
       </div>
     </div>
+  </div>
   <!--/.container-->
   <!--/.footer-->
 
