--- a/src/dye/templates/dye/performance_list.html
+++ b/src/dye/templates/dye/performance_list.html
@@ -24,7 +24,7 @@
         <div class="panel-body panel-content">
           <div class="panel panel-default">
 
-            <div class="panel-heading" role="tab" id="headingOne">
+            <div class="panel-heading" role="tab" id="search-panel">
               <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
                  aria-expanded="true" aria-controls="collapseOne" id="search-filter-link">
                 <h3 class="panel-title">
