--- a/src/dye/templates/dye/performance_list_table.html
+++ b/src/dye/templates/dye/performance_list_table.html
@@ -1,5 +1,5 @@
 {% load static %}
-<table class="table table-bordered table-hover">
+<table class="table table-bordered table-hover performance-table">
   <thead>
   <tr>
     <th>Molecule</th>
