--- a/src/DSSCDB/templates/DSSCDB/base.html
+++ b/src/DSSCDB/templates/DSSCDB/base.html
@@ -5,6 +5,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Dye Sensitized Solar Cell Database</title>
 
   <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}">
