--- a/src/dye/static/dye/css/dye.css
+++ b/src/dye/static/dye/css/dye.css
@@ -44,6 +44,11 @@ dl {
     color: white;
 }
 
+#search-panel {
+    border-top-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
 #search-filter-link:focus {
     text-decoration: none;
 }
@@ -70,4 +75,12 @@ dl {
 .matches-text {
     padding-left: 1rem;
     margin: 15px 0;
+}
+
+.performance-table tbody tr:hover {
+    cursor: pointer;
+}
+
+table tbody tr.clickable-row:hover {
+    cursor: pointer;
 }
