--- a/src/dye/templates/dye/single-upload.html
+++ b/src/dye/templates/dye/single-upload.html
@@ -8,7 +8,7 @@
       <div class="col-md-12">
         <div class="panel panel-default full-page-panel">
           <div class="panel-heading">
-            <h3 class="panel-title">Upload single performance data</h3>
+            <h3 class="panel-title">Upload record</h3>
           </div>
           <div class="panel-body panel-content">
             <form action="{% url 'dye:single-upload' %}" method="post" class="form">
