Add performance count on contribution details page

--- a/src/DSSCDB/templates/DSSCDB/index.html
+++ b/src/DSSCDB/templates/DSSCDB/index.html
@@ -6,7 +6,7 @@ Dye Sensitized Solar Cell Database
     <div class="container">
       <h2 class="display-3">Dye Sensitized Solar Cell Database</h2>
       <p>Welcome to DSSC database! </p>
-      <p><a href="#" role="button">Sign up</a> and <a href="{% url 'user:login' %}">log in</a> to browse the database
+      <p><a href="{% url 'user:signup' %}" role="button">Sign up</a> and <a href="{% url 'user:login' %}">log in</a> to browse the database
       </p>
     </div>
   </div>
