--- a/src/dye/templates/dye/single_evaluation.html
+++ b/src/dye/templates/dye/single_evaluation.html
@@ -33,6 +33,7 @@
                 {% endbuttons %}
               </form>
             {% endif %}
+            {{ performances.count }} records
             {% include 'dye/performance_list_table.html' %}
           </div>
         </div>
