Add InChI and SMILES to Performance detail view

--- a/src/dye/templates/dye/performance_detail.html
+++ b/src/dye/templates/dye/performance_detail.html
@@ -30,6 +30,19 @@
                          alt="Responsive image" class="materialboxed img-thumbnail molecule-detail-image">
 
                   </div>
+
+                  <table class="table simple-table table-striped">
+                    <tbody>
+                    <tr>
+                      <th>InChI</th>
+                      <td>{{ performance.molecule.inchi }}</td>
+                    </tr>
+                    <tr>
+                      <th>SMILES</th>
+                      <td>{{ performance.molecule.smiles }}</td>
+                    </tr>
+                    </tbody>
+                  </table>
                 </div>
               </div>
               <div class="col-md-6">
